# json-template

./: .gitlab-ci.yml  README.md  pyproject.toml  setup.py  test.py
examples/: example1.json
json-templates/: __init__.py
json_templates/: __init__.py
